      about the current state of a router.
    - Stream events also have REASON and REMOTE_REASON fields, working much
      like those for circuit events.
    - NS events to inform a controller when our opinion of a router's status
      has changed.
    - Add a GETINFO events/names and GETINFO features/names so controllers
      can tell which events and features are supported.

  o Security bugfixes:
    - When the user sends a NEWNYM signal, clear the client-side DNS
      cache too. Otherwise we continue to act on previous information.

  o Minor bugfixes:
    - Change NT service functions to be loaded on demand.  This lets us
      build with mingw without breaking Tor for Windows 98 users.
    - Do DirPort reachability tests less often, since a single test
      chews through many circuits before giving up.
    - In the hidden service example in torrc.sample, stop recommending
      esoteric and discouraged hidden service options.
    - Avoid sending junk to controllers or segfaulting when a controller
      uses EVENT_NEW_DESC with verbose nicknames.
    - When stopping an NT service, wait up to 10 sec for it to actually
      stop.  (Patch from Matt Edman; resolves bug 295.)
    - Fix handling of verbose nicknames with ORCONN controller events:
      make them show up exactly when requested, rather than exactly when
      not requested.
    - When reporting verbose nicknames in entry_guards_getinfo(), avoid
      printing a duplicate "$" in the keys we send.
    - Stop triggering asserts if the controller tries to extend hidden
      service circuits.
    - Correctly set maximum connection limit on Cygwin.
    - Try to detect windows correctly when cross-compiling.
    - Detect the size of the routers file correctly even if it is corrupted
      (on systems without mmap) or not page-aligned (on systems with mmap).
      This bug was harmless.
    - Implement the protocol correctly by always sending a RELAY_END cell