@@ -30,6 +30,8 @@ Changes in version 0.1.2.3-alpha - 2006-10-??
       has changed.
     - Add a GETINFO events/names and GETINFO features/names so controllers
       can tell which events and features are supported.
+    - A new CLEARDNSCACHE signal to allow controllers to clear the
+      client-side DNS cache without expiring circuits.
 
   o Security bugfixes:
     - When the user sends a NEWNYM signal, clear the client-side DNS
